# Cmake_VCPKG

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml  static.yml
CMake_VCPKG/: CMakeLists.txt  CMake_VCPKG.cpp  CMake_VCPKG.h
docs/: Doxyfile
docs/html/: _c_make___v_c_p_k_g_8cpp.html  _c_make___v_c_p_k_g_8cpp.js  _c_make___v_c_p_k_g_8cpp__incl.dot  _c_make___v_c_p_k_g_8cpp_source.html  _c_make___v_c_p_k_g_8h.html  _c_make___v_c_p_k_g_8h__incl.dot  _c_make___v_c_p_k_g_8h_source.html  dir_13814d8808174426bd7d362e01a1010a.html  dir_13814d8808174426bd7d362e01a1010a.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: files_0.js  functions_0.js
